--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
+    "sass": "^1.94.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
