--- a/section-3/package.json
+++ b/section-3/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.9.3",
     "vite": "^4.3.9"
   },
   "keywords": [],
